# RMM

./: .gitignore  CMakeLists.txt  Main.qml  ProcessMetrics.cpp  ProcessMetrics.h  README.md  main.cpp  systemmonitor.cpp  systemmonitor.h
Applet/: CMakeLists.txt  README.md
Applet/src/: CPUUsageMonitor.cpp  ProcessCPUMonitor.cpp
CrossProcess/: CMakeLists.txt  README.md
CrossProcess/src/: CPUUsageMonitor.cpp  CPUUsageMonitor.h  CrossProcess.cpp  CrossProcess.h  ProcessInfo.cpp  ProcessInfo.h  ScriptRunner.cpp  ScriptRunner.h
scripts/: Fibonacci.py  Hello.py  RunsWithError.py
src/cpp/: MetricsThread.cpp  MetricsThread.h  ProcessMetrics.cpp  ProcessMetrics.h  ScriptView.cpp  ScriptView.h  systemmonitor.cpp  systemmonitor.h
src/qml/: Main.qml
